[project]
name = "reporterv2"
version = "0.1.0"
description = "Training metrics client and web UI for reporterv2"
readme = "README.md"
authors = [{name ="Vehicle Researcher", email="user@comma.ai"}]
requires-python = ">=3.11"
dependencies = [
  "flask",
  "fsspec",
  "gunicorn[gevent]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reporterv2"]
